--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ body{
   max-width:90%;
   border-radius:12px;
   margin:10px 0;
+  box-shadow:0 0 10px rgba(255,105,180,0.4);
 }
 #message{
   font-size:1.1rem;
@@ -120,7 +121,8 @@ body{
 </audio>
 
 <div id="content">
-  <img src="photo.jpg" alt="Saniya photo">
+  <img src="photo1.jpg" alt="Saniya photo 1">
+  <img src="photo2.jpg" alt="Saniya photo 2">
   <video src="VID-20241216-WA0003.mp4" controls></video>
   <div id="message">
 Heeyy Saniya 💖  
@@ -160,4 +162,3 @@ envelope.addEventListener("click",()=>{
 </script>
 </body>
 </html>
-
