--- a/index.html
+++ b/index.html
@@ -116,10 +116,6 @@ body{
 
 <div class="sparkles" id="sparkles"></div>
 
-<audio id="bgm" autoplay loop>
-  <source src="VID-20241216-WA0003.mp4" type="audio/mp4">
-</audio>
-
 <div id="content">
   <img src="photo1.jpg" alt="Saniya photo 1">
   <img src="photo2.jpg" alt="Saniya photo 2">
@@ -148,8 +144,34 @@ for(let i=0;i<80;i++){
   s.style.animationDelay=Math.random()*4+"s";
   sparkles.appendChild(s);
 }
+
+// This 'click' event listener is now updated
 envelope.addEventListener("click",()=>{
   envelope.classList.add("open");
+  
+  // --- START: Added code for YouTube BGM ---
+  // Create an iframe element
+  const iframe = document.createElement('iframe');
+  
+  // Hide the iframe so it plays in the background
+  iframe.style.display = 'none'; 
+  
+  // Set the YouTube embed URL with all parameters:
+  // videoId = dmrJU4QP2Gc
+  // autoplay=1 (starts playing on load)
+  // start=80 (starts at 1 min 20 sec)
+  // loop=1 (loops the video)
+  // playlist=dmrJU4QP2Gc (required for loop=1 to work)
+  // controls=0 (hides player controls)
+  iframe.src = "https://www.youtube.com/embed/dmrJU4QP2Gc?autoplay=1&start=80&loop=1&playlist=dmrJU4QP2Gc&controls=0";
+  
+  // Allow autoplay
+  iframe.allow = "autoplay";
+  
+  // Add the iframe to the page, which will trigger the autoplay
+  document.body.appendChild(iframe);
+  // --- END: Added code for YouTube BGM ---
+
   setTimeout(()=>{
     envelope.style.display="none";
     document.querySelector(".spark-text").style.display="none";
