--- a/index.html
+++ b/index.html
@@ -102,13 +102,11 @@ body{
   animation:spark 2s infinite alternate;
   white-space:pre-line;
 }
-/* This style is no longer needed */
-/* #player {
+#player {
   position: absolute;
   top: -9999px;
   left: -9999px;
-} 
-*/
+}
 </style>
 </head>
 <body>
@@ -123,11 +121,7 @@ body{
 
 <div class="sparkles" id="sparkles"></div>
 
-<audio id="birthday-music" loop>
-  <source src="aud1.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
-
+<div id="player"></div>
 
 <div id="content">
   <div id="message">
@@ -146,16 +140,45 @@ Happy Birthday Saniya ✨✨
   <img src="photo1.jpg" alt="Saniya photo 1">
   <img src="photo2.jpg" alt="Saniya photo 2">
 </div>
-
+<script src="https://www.youtube.com/iframe_api"></script>
 
 <script>
 const envelope=document.getElementById("envelope");
 const content=document.getElementById("content");
 const sparkles=document.getElementById("sparkles");
-// *** Get the new audio element ***
-const music = document.getElementById("birthday-music"); 
 
-// --- YouTube Player Code Removed ---
+// --- YouTube Player Code ---
+var player;
+function onYouTubeIframeAPIReady() {
+  player = new YT.Player('player', {
+    height: '0',
+    width: '0',
+    videoId: 'dmrJU4QP2Gc', // The Video ID from the URL
+    playerVars: {
+      'autoplay': 0,      // Can't autoplay, will play on click
+      'controls': 0,      // No controls
+      'start': 81,        // Start at 1 min 21 sec (81 seconds)
+      'disablekb': 1,     // Disable keyboard
+      'iv_load_policy': 3 // Hide annotations
+    },
+    events: {
+      'onReady': onPlayerReady,
+      'onStateChange': onPlayerStateChange
+    }
+  });
+}
+
+function onPlayerReady(event) {
+  // Player is loaded, but we wait for the user click
+}
+
+function onPlayerStateChange(event) {
+  if (event.data == YT.PlayerState.ENDED) {
+    player.seekTo(81, true); // Loop back to 1:21 and play again
+  }
+}
+// --- End of YouTube Player Code ---
+
 
 // Create sparkles
 for(let i=0;i<80;i++){
@@ -166,13 +189,12 @@ for(let i=0;i<80;i++){
   sparkles.appendChild(s);
 }
 
-// *** MODIFIED click event ***
+// MODIFIED click event
 envelope.addEventListener("click",()=>{
-  // Play the local audio file
-  music.currentTime = 82; // Start at 1 min 22 sec (82 seconds)
-  music.play();
+  if (player && typeof player.playVideo === 'function') {
+    player.playVideo();
+  }
 
-  // Original envelope animation
   envelope.classList.add("open");
   setTimeout(()=>{
     envelope.style.display="none";
